target/.metadata/.plugins/org.eclipse.cdt.ui/volatile.build.log
14:11:20 **** Incremental Build of configuration Debug for project volatile ****
make -j12 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O1 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c: In function 'main':
../Src/main.c:34:10: error: assignment of read-only variable 'num2'
   34 |     num2 = 49;
      |          ^
make: *** [Src/subdir.mk:25: Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

14:11:21 Build Failed. 2 errors, 0 warnings. (took 171ms)

